# tracy

./: .gitignore  CMakeLists.txt  Tracy.hpp  TracyC.h  TracyOpenCL.hpp  TracyOpenGL.hpp  TracyVulkan.hpp  capstone_conanfile.py  client_conanfile.py  conanfile.py  server_conanfile.py
client/: TracyProfiler.cpp  TracyProfiler.hpp
server/: TracyView.cpp
test_client_package/: CMakeLists.txt  example.cpp
test_package/: conanfile.py
